--- a/renderer/index.html
+++ b/renderer/index.html
@@ -3,26 +3,55 @@
   <head>
     <meta charset="UTF-8" />
     <title>WhatsApp Desktop - Bodas</title>
+    <style>
+      body {
+        font-family: Arial, sans-serif;
+        padding: 1rem;
+      }
+      #qr-container {
+        display: none;
+        margin: 1rem 0;
+      }
+      #qr {
+        width: 300px;
+        border: 1px solid #ccc;
+      }
+      pre {
+        background: #f9f9f9;
+        padding: 0.5rem;
+        border: 1px solid #ccc;
+        height: 200px;
+        overflow-y: auto;
+      }
+    </style>
   </head>
   <body>
     <h2>Estado de sesión</h2>
     <div id="estado">Cargando...</div>
 
-    <h2>QR de WhatsApp</h2>
-    <img id="qr" src="" width="300" />
+    <div id="qr-container">
+      <h2>QR de WhatsApp</h2>
+      <img id="qr" src="" />
+    </div>
 
     <h2>Log de eventos</h2>
     <pre id="log"></pre>
 
     <script>
+      // Escucha el QR solo si lo recibe
       window.electronAPI.onQR((qr) => {
-        document.getElementById("qr").src = qr;
+        const qrContainer = document.getElementById("qr-container");
+        const qrImg = document.getElementById("qr");
+        qrImg.src = qr;
+        qrContainer.style.display = "block";
       });
 
+      // Escucha logs
       window.electronAPI.onLog((msg) => {
         document.getElementById("log").textContent += msg + "\n";
       });
 
+      // Al cargar, pide el estado
       window.electronAPI.obtenerEstado().then((estado) => {
         document.getElementById("estado").textContent = estado;
       });
